--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,11 @@
-APP_NAME=
-
 SERVER_IP=
 
 #Database connection
-DB_USER=
-DB_DATABASE=
-DB_PASSWORD=
-DB_HOST=
+DB_USER=bioserver
+DB_PASSWORD=bioserver
+
+BIO1_DB_DATABASE=bioserver
+BIO2_DB_DATABASE=bioserver2
 
 #Game server
-JAVA_DB_PARAMS=
-
-#Build args
-DNAS_SRC=
-DNAS_DEST=
-
-FPM_HOST=
-
-LOBBY_SERVER_PORT=
-GAME_SERVER_PATH=
-GAME_RUN_FILE_PATH=
-GAME_SERVER_PORT=
+JAVA_DB_PARAMS="&autoReconnect=true&useSSL=false"
