--- a/docker/vars/apache/httpd.conf
+++ b/docker/vars/apache/httpd.conf
@@ -540,10 +540,10 @@ Listen 443
         RewriteRule ^(/.*)/others$ $1/others.php [PT]
         # send this to php-fpm socket (needs write access!)
         <FilesMatch "\.php$">
-            SetHandler "proxy:fcgi://{{FPM_HOST}}:9000"
+            SetHandler "proxy:fcgi://biofpm:9000"
         </FilesMatch>
 
-        <Proxy fcgi://{{FPM_HOST}}:9000>
+        <Proxy fcgi://biofpm:9000>
             ProxySet connectiontimeout=5 timeout=240
         </Proxy>
 
@@ -607,10 +607,10 @@ Listen 443
         RewriteRule ^(/.*)/others$ $1/others.php [PT]
         # send this to php-fpm socket (needs write access!)
         <FilesMatch "\.php$">
-            SetHandler "proxy:fcgi://{{FPM_HOST}}:9000"
+            SetHandler "proxy:fcgi://biofpm:9000"
         </FilesMatch>
 
-        <Proxy fcgi://{{FPM_HOST}}:9000>
+        <Proxy fcgi://biofpm:9000>
             ProxySet connectiontimeout=5 timeout=240
         </Proxy>
 
@@ -665,10 +665,10 @@ Listen 443
         RewriteRule ^(/.*)/others$ $1/others.php [PT]
         # send this to php-fpm socket (needs write access!)
         <FilesMatch "\.php$">
-            SetHandler "proxy:fcgi://{{FPM_HOST}}:9000"
+            SetHandler "proxy:fcgi://biofpm:9000"
         </FilesMatch>
 
-        <Proxy fcgi://{{FPM_HOST}}:9000>
+        <Proxy fcgi://biofpm:9000>
             ProxySet connectiontimeout=5 timeout=240
         </Proxy>
 
