--- a/docker/vars/dns/dnsmasq.conf
+++ b/docker/vars/dns/dnsmasq.conf
@@ -1,2 +1,11 @@
-listen-address=127.0.0.1,10.0.0.200
-# server=127.0.0.1
+#log all dns queries
+log-queries
+#dont use hosts nameservers
+no-resolv
+#use router as secondary DNS
+server={{ROUTER_IP}}
+#explicitly define host-ip mappings
+address=/gate1.jp.dnas.playstation.org/{{SERVER_IP}}
+address=/www01.kddi-mmbb.jp/{{SERVER_IP}}
+address=/gate1.eu.dnas.playstation.org/{{SERVER_IP}}
+address=/gate1.us.dnas.playstation.org/{{SERVER_IP}}
