Add "SetEnv ap_trust_cgilike_cl 1" to host configurations
Ensures the Content-Length header doesn't get discarded

--- a/docker/vars/apache/httpd.conf
+++ b/docker/vars/apache/httpd.conf
@@ -500,6 +500,8 @@ Include conf/extra/proxy-html.conf
 Listen 443
 <IfModule ssl_module>
 <VirtualHost *:443>
+        # Ensure Content-Length from php isn't discarded
+        SetEnv ap_trust_cgilike_cl 1
         SSLEngine on
         # nail it to the securest cipher PS2 understands DHE-RSA-DES-CBC3-SHA
         # check this with openssl
@@ -573,6 +575,8 @@ Listen 443
 </VirtualHost>
 
 <VirtualHost *:443>
+        # Ensure Content-Length from php isn't discarded
+        SetEnv ap_trust_cgilike_cl 1
         SSLEngine on
         # nail it to the securest cipher PS2 understands DHE-RSA-DES-CBC3-SHA
         # check this with openssl
@@ -632,6 +636,8 @@ Listen 443
         downgrade-1.0 force-response-1.0
 </VirtualHost>
 <VirtualHost *:443>
+        # Ensure Content-Length from php isn't discarded
+        SetEnv ap_trust_cgilike_cl 1
         SSLEngine on
         # nail it to the securest cipher PS2 understands DHE-RSA-DES-CBC3-SHA
         # check this with openssl
